<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_home"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/headerMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/toolbal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_home">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                tools:context=".MainActivity">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-12dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shape_title_add_trip"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/addTrip"
                    android:textColor="@color/white"
                    android:textSize="25dp"></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/Destination"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="22sp"

                    android:textStyle="italic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/field_add_trip"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"

                        android:layout_height="35dp"
                        android:layout_marginTop="4dp"
                        android:src="@drawable/placeholder">

                    </ImageView>

                    <View
                        android:layout_width="2dp"
                        android:layout_height="42dp"
                        android:layout_marginTop="2dp"
                        android:background="#2D000000">

                    </View>

                    <EditText
                        android:id="@+id/editTextDestination"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"></EditText>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/Period"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="22dp"

                    android:textStyle="italic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/field_add_trip"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/pickLeaveDate"
                        android:layout_width="50dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="4dp"
                        android:src="@drawable/schedule">

                    </ImageView>

                    <View
                        android:layout_width="2dp"
                        android:layout_height="42dp"
                        android:layout_marginTop="2dp"
                        android:background="#2D000000">

                    </View>

                    <EditText
                        android:id="@+id/etLeaveDate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0.7"
                        android:background="@null"
                        android:hint="@string/leave"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"></EditText>
                </LinearLayout>

                <View
                    android:layout_width="3dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@color/white">

                </View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/field_add_trip"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/pickArriveDate"
                        android:layout_width="50dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="4dp"
                        android:src="@drawable/schedule">

                    </ImageView>

                    <View
                        android:layout_width="2dp"
                        android:layout_height="42dp"
                        android:layout_marginTop="2dp"
                        android:background="#2D000000">

                    </View>

                    <EditText
                        android:id="@+id/etArrivalDate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0.7"
                        android:background="@null"
                        android:hint="@string/arrivalDate"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"></EditText>

                </LinearLayout>



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/Description"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="22dp"
                    android:textStyle="italic" />

                <EditText
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp"
                    android:background="@drawable/edi_text_rounded_corners"
                    android:lines="4">

                </EditText>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/Type"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="22dp"
                    android:textStyle="italic" />
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_marginTop="11dp"
                    android:id="@+id/spinnerTypeTravel"
                    android:layout_height="50dp">
                </Spinner>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginTop="11dp"
                    android:textSize="20dp"
                    android:id="@+id/countPhotos"
                    android:textAlignment="center"
                    android:text="@string/NoPhotoSelected"
                    android:background="#97A4DBF4"
                    android:layout_height="wrap_content">

                </TextView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:background="#7AA1E3"
                        android:text="@string/chosePhoto"
                        android:id="@+id/btnChoose"
                        android:layout_height="wrap_content">
                    </Button>
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_height="45dp"
                        android:src="@drawable/camera__1_">
                    </ImageView>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:background="#7AA1E3"
                        android:text="@string/Upload"
                        android:id="@+id/btnUpload"
                        android:layout_height="wrap_content">
                    </Button>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/Note"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="22dp"
                    android:textStyle="italic" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:progressTint="#76CCF2"></RatingBar>

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white">

        <include layout="@layout/principal_menu"></include>
    </RelativeLayout>


</androidx.drawerlayout.widget.DrawerLayout>