<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ACCDE8"
    android:orientation="vertical"
    android:id="@+id/menuId">


    <ImageView
        android:layout_width="42dp"
        android:layout_height="46dp"
        android:layout_gravity="left"
        android:src="@drawable/cross_mark">
    </ImageView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:src="@drawable/user__2_"></ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:id="@+id/tvUsername"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"></TextView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white">
    </View>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:onClick=""
            android:id="@+id/myTrips">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:id="@+id/menuMyTrips">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/myTrips"
                    android:textSize="22dp"></TextView>

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    
                    android:layout_marginEnd="28dp">

                </ImageView>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                android:id="@+id/menuUpcoming">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/UpcomingTrips"
                    android:textSize="22dp">

                </TextView>

                <ImageView
                    android:layout_width="50dp"

                    android:layout_height="match_parent"
                    android:layout_marginEnd="28dp"
                    android:src="@drawable/airplane">
                </ImageView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                android:id="@+id/menuWishlist">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/Wishlist"
                    android:textSize="22dp">

                </TextView>

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="28dp"
                    android:src="@drawable/heart">

                </ImageView>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                android:id="@+id/menuStatistics">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/statistics"
                    android:textSize="22dp">

                </TextView>

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="28dp"
                    android:src="@drawable/diagram">

                </ImageView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                android:id="@+id/menuSettings">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:padding="10dp"
                    android:text="@string/Settings"
                    android:textSize="22dp">
                </TextView>

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="28dp"
                    android:src="@drawable/settings">

                </ImageView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"
                android:id="@+id/menuLogOut">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/LogOut"
                    android:textSize="20dp">

                </TextView>

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="28dp"
                    android:src="@drawable/exit"></ImageView>
            </LinearLayout>

        </LinearLayout>


    </ScrollView>


</LinearLayout>